@@ -82,6 +82,15 @@ debbugs (2.4.2) UNRELEASED; urgency=low
       that look like urls in the html records output by bugreport.cgi.
     - Things that look like urls in message bodies are now linked
       (closes: #168962)
+    - Add Debbugs::Mail module that has two important functions:
+      send_mail_message and encode_headers. All mail handling in service.in
+      and process.in now uses send_mail_message to send mail messages which
+      tries as hard as possible to send a message; if it fails, only
+      warnings are returned. This fixes bad addresses causing sendmail to
+      exit and destroying the bug log. (closes: #191306)
+    - Add rudimentary Test::More modules for testing Debbugs::Mime and
+      Debbugs::Mail. These are currently not called as part of the build
+      process.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
